Added minimun impl for findAll hero service method